<resources>
    <string name="app_name" translatable="false">Wildberries</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_post_like" translatable="false">Like</string>
    <string name="description_post_share" translatable="false">Share</string>
    <string name="description_post_save" translatable="false">Save</string>
    <string name="menu_remove" translatable="false">Remove</string>
    <string name="post_text" translatable="false">Post Text</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="error_empty_content" translatable="false">Content can\'t be empty</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="retry_loading" translatable="false">Retry</string>
    <string name="empty_posts" translatable="false">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading" translatable="false">Something went wrong. Try again later</string>
    <string name="save" translatable="false">Save</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="departure_city">Departure City:</string>
    <string name="arivial_city">Arivial City:</string>
    <string name="departure_date">Departure date:</string>
    <string name="arivial_date">Arivial date:</string>
    <string name="price">Price in rubles:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>