<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_spacing">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintBottom_toTopOf="@id/departure_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <TextView
            android:id="@+id/departure_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/arivial_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/departure"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Краснодар" />

        <TextView
            android:id="@+id/departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_city"
            app:layout_constraintEnd_toStartOf="@id/departure_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/arivial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arivial_city"
            app:layout_constraintEnd_toStartOf="@id/arivial_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/departure" />

        <TextView
            android:id="@+id/arivial_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            app:layout_constraintStart_toEndOf="@id/arivial"
            app:layout_constraintTop_toBottomOf="@id/departure"
            tools:text="Москва" />

        <TextView
            android:id="@+id/arivial_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arivial_date"
            app:layout_constraintEnd_toStartOf="@id/arivial_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/departure_d" />


        <TextView
            android:id="@+id/arivial_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            app:layout_constraintStart_toEndOf="@id/arivial_d"
            app:layout_constraintTop_toBottomOf="@id/departure_d"
            tools:text="today" />

        <TextView
            android:id="@+id/departure_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_date"
            app:layout_constraintEnd_toStartOf="@id/departure_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arivial_city" />


        <TextView
            android:id="@+id/departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            app:layout_constraintStart_toEndOf="@id/departure_d"
            app:layout_constraintTop_toBottomOf="@id/arivial_city"
            tools:text="today" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arivial_d" />


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toEndOf="@id/text"
            app:layout_constraintTop_toBottomOf="@id/arivial_d"
            tools:text="1 0000" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar,arivial_city,arivial_d,arivial_city,departure_d,price,text" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_post_like"
            app:icon="@drawable/ic_like_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:checked="true"
            tools:text="0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
